Fix shortcut overload
 * fixes #19003
 * add the `start search` action in edit menu to correctly handle its shortcut
 * modify the Camera Undo shortcut

--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -163,6 +163,7 @@ set(classes
   pqSaveScreenshotReaction
   pqSaveStateReaction
   pqScalarBarVisibilityReaction
+  pqSearchItemReaction
   pqSelectionReaction
   pqSeriesEditorPropertyWidget
   pqServerConnectReaction
