Add test exercising Cell Size filter on AMR data from CTH
(cherry picked from commit 47dedafc47edb19358c97e562ca2f1377217555b)

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -690,6 +690,7 @@ list(APPEND TESTS_WITH_BASELINES
   ContourCellData.xml
   CopyPasteProperties.xml
   CTHAMRBaseline.xml
+  CTHAMRCellSize.xml
   CTHAMRClip.xml
   CTHAMRContour.xml
   CTHAMRDualClip.xml
