--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,14 @@ if (NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
   set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
 endif ()
 
+set(CMAKE_INSTALL_LICENSEDIR ""
+  CACHE PATH "License files (DATAROOTDIR/licenses/${CMAKE_PROJECT_NAME}")
+mark_as_advanced(CMAKE_INSTALL_LICENSEDIR)
+if (NOT CMAKE_INSTALL_LICENSEDIR)
+  set(CMAKE_INSTALL_LICENSEDIR
+    "${CMAKE_INSTALL_DATAROOTDIR}/licenses/${CMAKE_PROJECT_NAME}")
+endif ()
+
 set(paraview_cmake_dir "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 set(vtk_cmake_dir "${CMAKE_CURRENT_SOURCE_DIR}/VTK/CMake")
 list(APPEND CMAKE_MODULE_PATH
@@ -488,6 +496,7 @@ else ()
     INSTALL_HEADERS     "${PARAVIEW_INSTALL_DEVELOPMENT_FILES}"
     HEADERS_DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/paraview${paraview_version_suffix}"
     CMAKE_DESTINATION   "${paraview_cmake_destination}/vtk"
+    LICENSE_DESTINATION "${CMAKE_INSTALL_LICENSEDIR}"
     HIERARCHY_DESTINATION "${CMAKE_INSTALL_LIBDIR}/vtk/hierarchy/${CMAKE_PROJECT_NAME}"
     LIBRARY_NAME_SUFFIX "${PARAVIEW_CUSTOM_LIBRARY_SUFFIX}"
     VERSION             "${PARAVIEW_VERSION}"
@@ -512,7 +521,7 @@ else ()
 
   install(
     FILES       "${CMAKE_CURRENT_SOURCE_DIR}/VTK/Copyright.txt"
-    DESTINATION "${CMAKE_INSTALL_DOCDIR}/VTK"
+    DESTINATION "${CMAKE_INSTALL_LICENSEDIR}/VTK"
     COMPONENT   "license")
 endif ()
 
@@ -532,6 +541,7 @@ vtk_module_build(
   INSTALL_HEADERS     "${PARAVIEW_INSTALL_DEVELOPMENT_FILES}"
   HEADERS_DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/paraview${paraview_version_suffix}"
   CMAKE_DESTINATION   "${paraview_cmake_destination}"
+  LICENSE_DESTINATION "${CMAKE_INSTALL_LICENSEDIR}"
   HIERARCHY_DESTINATION "${CMAKE_INSTALL_LIBDIR}/vtk/hierarchy/${CMAKE_PROJECT_NAME}"
   LIBRARY_NAME_SUFFIX "${PARAVIEW_CUSTOM_LIBRARY_SUFFIX}"
   VERSION             "${PARAVIEW_VERSION}"
@@ -794,7 +804,7 @@ endif()
 install(
   FILES       "${CMAKE_CURRENT_SOURCE_DIR}/Copyright.txt"
               "${CMAKE_CURRENT_SOURCE_DIR}/License_v1.2.txt"
-  DESTINATION "${CMAKE_INSTALL_DOCDIR}"
+  DESTINATION "${CMAKE_INSTALL_LICENSEDIR}"
   COMPONENT   "license")
 
 #-----------------------------------------------------------------------------
