Python: GetActiveCamera decorator inherit from Camera
Signed-off-by: Vicente Adolfo Bolea Sanchez <vicente.bolea@kitware.com>

--- a/Remoting/Application/Testing/Python/CMakeLists.txt
+++ b/Remoting/Application/Testing/Python/CMakeLists.txt
@@ -11,6 +11,7 @@ set(PY_TESTS
   ColorAttributeTypeBackwardsCompatibility.py,NO_VALID
   CSVWriterReader.py,NO_VALID
   GenerateIdScalarsBackwardsCompatibility.py,NO_VALID
+  GetActiveCamera.py,NO_VALID
   GhostCellsInMergeBlocks.py
   IntegrateAttributes.py,NO_VALID
   LookupTable.py,NO_VALID
