Add Multiplexer Proxy
This adds a new type of proxy called the Multiplexer which is intended
to be used in cases where a proxy should behave as one of the available
set of proxies at runtime.

Implements #19936.

--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -51,6 +51,7 @@ set(classes
   vtkSIInputProperty
   vtkSIIntVectorProperty
   vtkSIMetaReaderProxy
+  vtkSIMultiplexerSourceProxy
   vtkSIObject
   vtkSIProperty
   vtkSIProxy
@@ -109,6 +110,8 @@ set(classes
   vtkSMLoadStateOptionsProxy
   vtkSMMapProperty
   vtkSMMessage
+  vtkSMMultiplexerSourceProxy
+  vtkSMMultiplexerInputDomain
   vtkSMNamedPropertyIterator
   vtkSMNullProxy
   vtkSMNumberOfComponentsDomain
