--- a/Remoting/ServerManager/Testing/Cxx/CMakeLists.txt
+++ b/Remoting/ServerManager/Testing/Cxx/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 vtk_add_test_cxx(vtkRemotingServerManagerCxxTests tests
   NO_DATA NO_VALID
   TestAdjustRange.cxx
+  TestMultiplexerSourceProxy.cxx
   TestProxyAnnotation.cxx
   TestRecreateVTKObjects.cxx
   TestSelfGeneratingSourceProxy.cxx
