Support partial arrays in spreadsheet view.
Partial arrays are now shown as empty cell in the spreadsheet view.

Fixes #19957.

--- a/Remoting/Views/Testing/Python/CMakeLists.txt
+++ b/Remoting/Views/Testing/Python/CMakeLists.txt
@@ -4,6 +4,7 @@
 set(PY_TESTS
   LockScalarRangeBackwardsCompatibility.py,NO_VALID
   SpreadSheetViewBlockNames.py,NO_VALID
+  SpreadSheetViewPartialArrays.py,NO_VALID
   )
 
 paraview_add_test_python(
