Make IOSSReader a plugin
For the time being, we make the IOSS reader a plugin. Once the reader is
ready to replace exodus reader, we should revert this commit and instead
make exodus reader a plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,6 +261,7 @@ set(paraview_default_plugins
   GeodesicMeasurement
   GMVReader
   HyperTreeGridADR
+  IOSSReader
   LagrangianParticleTracker
   Moments
   MooseXfemClip
