--- a/Remoting/Application/CMakeLists.txt
+++ b/Remoting/Application/CMakeLists.txt
@@ -362,7 +362,7 @@ if (TARGET VTK::FiltersParallel AND
     Resources/filters_selectionfftovertime.xml)
 endif()
 
-if (TARGET VTK::IOIoss)
+if (TARGET VTK::IOIoss AND FALSE) # disabling for now
   list(APPEND xml_files
     Resources/readers_ioioss.xml)
 endif()
