--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -18,8 +18,10 @@ set(python_files
   paraview/detail/__init__.py
   paraview/detail/annotation.py
   paraview/detail/calculator.py
+  paraview/detail/catalyst_export.py
   paraview/detail/exportnow.py
   paraview/detail/extract_selection.py
+  paraview/detail/loghandler.py
   paraview/detail/pythonalgorithm.py
   paraview/detail/python_selector.py
   paraview/live.py
