panel_widget: added pqCheckeableProperty
Property widget representing a checkable (optional) properties.

Signed-off-by: Vicente Adolfo Bolea Sanchez <vicente.bolea@kitware.com>

--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -79,6 +79,7 @@ set(classes
   pqCustomShortcutBehavior
   pqCustomizeShortcutsReaction
   pqCustomizeShortcutsDialog
+  pqCheckableProperty
   pqCustomViewpointsToolbar
   pqCylinderPropertyWidget
   pqDataAssemblyPropertyWidget
