Fix module import error
Need to find ParaView package first to ensure imported VTK modules are
defined.

--- a/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
+++ b/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
@@ -34,6 +34,7 @@ if (TARGET CachingExampleAdaptor)
       CachingExampleAdaptor
       VTK::mpi)
 else ()
+  find_package(ParaView REQUIRED)
   add_executable(CachingExample
     FEDriver.cxx
     FEDataStructures.cxx
