Attempting to make TestCatalystClient test less error prone.
This test is bad. This is merely a workaround for now to avoid it from
hanging.

--- a/Clients/ParaView/Testing/Python/CMakeLists.txt
+++ b/Clients/ParaView/Testing/Python/CMakeLists.txt
@@ -198,7 +198,8 @@ if (PARAVIEW_USE_MPI AND MPIEXEC_EXECUTABLE)
       --script-version 2
       -t 10
       --size 21
-    --client $<TARGET_FILE:ParaView::pvpython> -dr)
+      --delay 2
+    --client $<TARGET_FILE:ParaView::pvpython> --force-offscreen-rendering -dr)
   vtk_add_test_python(NO_DATA NO_RT TestCatalystClient.py)
   unset(_vtk_testing_python_exe)
   unset(_vtk_test_python_args)
